# ZTL

./: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/workflows/: build.yml  tests.yml
include/ztl/: array.hpp  bits.hpp  circular_array.hpp  compilation_time.hpp  concepts.hpp  counted_latch.hpp  delayed_latch.hpp  directional_latch.hpp  edge_detector.hpp  enum.hpp  explicit_wrapper.hpp  fail.hpp  fixed_string.hpp  implicit_wrapper.hpp  inplace_deque.hpp  inplace_list.hpp  inplace_vector.hpp  limits.hpp  math.hpp  meta.hpp  moving_average.hpp  overload.hpp  spline.hpp  static_list.hpp  static_vector.hpp  string.hpp  system_error.hpp  type_traits.hpp  units.hpp  utility.hpp  ztl.hpp
tests/: CMakeLists.txt  bits.cpp  compilation_time.cpp  concepts.cpp  counted_latch.cpp  delayed_latch.cpp  directional_latch.cpp  edge_detector.cpp  enum.cpp  explicit_wrapper.cpp  inplace_deque.cpp  inplace_list.cpp  inplace_vector.cpp  limits.cpp  main.cpp  math.cpp  meta.cpp  moving_average.cpp  spline.cpp  static_list.cpp  string.cpp  type_traits.cpp  utility.cpp
tests/array/: make_array.cpp
tests/circular_array/: const_correctness.cpp  ctor.cpp  empty.cpp  full.cpp  implicit_conversion_iterator2const_iterator.cpp  iterator_arithmetic.cpp  iterator_comparison.cpp  iterator_decrement.cpp  iterator_increment.cpp  size.cpp  sort.cpp  traits.cpp
tests/compilation_time/: compilation_time.cpp  unix_compilation_time.cpp
tests/counted_latch/: ctor.cpp  set.cpp
tests/directional_latch/: set.cpp
tests/edge_detector/: edge_detector.cpp
tests/enum/: and.cpp  assign_and.cpp  assign_or.cpp  assign_xor.cpp  bitwise_not.cpp  e.hpp  logical_not.cpp  or.cpp  unary_minus.cpp  unary_plus.cpp  xor.cpp
tests/explicit_wrapper/: explicit_wrapper.cpp
tests/fixed_string/: ctor.cpp
tests/inplace_deque/: const_correctness.cpp  ctor.cpp  empty.cpp  full.cpp  implicit_conversion_iterator2const_iterator.cpp  iterator_arithmetic.cpp  iterator_comparison.cpp  iterator_decrement.cpp  iterator_increment.cpp  resize.cpp  size.cpp  sort.cpp  traits.cpp
tests/inplace_vector/: ctor.cpp  empty.cpp  full.cpp
tests/limits/: smallest_signed.cpp  smallest_unsigned.cpp
tests/math/: align.cpp  digit.cpp  hundreds_digit.cpp  lerp.cpp  make_linspace.cpp  ones_digit.cpp  tens_digit.cpp
tests/meta/: for_each.cpp  reverse.cpp
tests/moving_average/: moving_average.cpp
tests/spline/: spline.cpp
tests/static_list/: clear.cpp  empty.cpp  pop_back.cpp  pop_front.cpp  push_back.cpp  push_front.cpp  size.cpp  static_list_test.cpp  static_list_test.hpp
tests/static_vector/: ctor.cpp  empty.cpp  full.cpp  structured_binding.cpp
tests/string/: atoi.cpp  strcmp.cpp  strcpy.cpp  strlen.cpp  strncpy.cpp  strstr.cpp
tests/type_traits/: are_same.cpp  can_have_empty_argument_list.cpp  contains_type.cpp  count_type.cpp  has_base_from_all.cpp  has_base_from_any.cpp  is_derived_from.cpp  is_derived_from_all.cpp  is_derived_from_any.cpp  is_specialization_of.cpp  is_template.cpp  template_size.cpp  template_t.cpp  tuple_index.cpp  type_index.cpp
tests/utility/: get.cpp  index_sequence2mask.cpp  make_integer_sequence_from_to.cpp
